--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>CSS for Beginners</title>
+        <link rel="stylesheet" type="text/css" href="css/syntax.css">
     </head>
 
     <body>
