--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,16 @@
 
     <body>
 
-        <p class="welcome" style="font-size:10px; color:red;">Welcome!</p>
+       
         <div id="header">
             <h1>Contact Us</h1>
         </div>
 
         <p>Hello there ninjas! Contact us below</p>
-        <p>Hello there ninjas! Contact us below</p>
-        <p>Hello there ninjas! Contact us below</p>
-        <p>Hello there ninjas! Contact us below</p>
-        <p>Hello there ninjas! Contact us below</p>
+        <p>Arent paragraphs cool?</p>
+
+        <a href="http://www.google.com">Google</a>
+        <span>Yo i am a span tag</span>
 
 
 
