--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,19 @@
        
         <div id="header">
             <h1>Contact Us</h1>
+            <h2>Contact the Net Ninja</h2>
         </div>
+
+        <h2 id="content-header">Content</h2>
 
         <p>Hello there ninjas! Contact us below</p>
         <p>Arent paragraphs cool?</p>
 
         <a href="http://www.google.com">Google</a>
-        <span>Yo i am a span tag</span>
+        <span class="decK">Yo i am a span tag</span>
+        <span class="deck">deck of spans</span>
+        <span class="deck">i like span decks</span>
+
 
 
 
